Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-5554

Race between resend and reply processing (2)

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.8.0
    • Lustre 2.6.0, Lustre 2.7.0
    • 3
    • 15490

      The full description exist at LU-5116.
      First commit 56e5a6bb4fc0329092f85016b8664da0b6ffa8a8
      decrease race window, but doesnot remove it. Disable rq_resend
      right afetr MSG_REPLY flag set. Import lock protects two threads
      from race between set/clear MSG_REPLY and rq_resend flags.

            laisiyao Lai Siyao
            aboyko Alexander Boyko
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: